<resources>
    <string name="app_name">EventDicoding</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_event_detail">Detail</string>

    <string name="judul">Event Name</string>
    <string name="owner">Pemilik :</string>
    <string name="input_owner">Owner Data</string>
    <string name="time">Waktu :</string>
    <string name="input_time">Time Data</string>
    <string name="quota">Kuota :</string>
    <string name="input_quota">Quota Data</string>
    <string name="regist">Sisa Kuota :</string>
    <string name="input_regist">Registrant Data</string>
    <string name="desc">Deskripsi :</string>
    <string name="input_desc">Event Description</string>
    <string name="btn_link">Open Event Link</string>
    <string name="img_desc">EventImage</string>
    <string name="event_name">Event Name</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_btn">Favourite</string>
    <string name="setting">Pengaturan</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="reminder">Daily Reminder</string>
</resources>