<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="740dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_image" />

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/judul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Event Owner -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/tvOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/eventOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_owner"
                android:textSize="16sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Event Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_time"
                android:textSize="16sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Event Quota -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quota"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/eventQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_quota"
                android:textSize="16sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Event Registrant -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/tvRegistrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/eventRegistrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_regist"
                android:textSize="16sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Event Description -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/desc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_desc"
            android:textSize="14sp" />

        <!-- Button and ProgressBar -->
        <Button
            android:id="@+id/openLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_link" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
